[FIX] slider css cleaned and added fixed alignment

--- a/website/events/static/css/eventdetails.css
+++ b/website/events/static/css/eventdetails.css
@@ -490,58 +490,6 @@ img{
   }
 }
 
-/*SLIDER*/
-
-.section-slider-swiper{
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  padding-left: 120px;
-}
-
-.swiper-container{
-  width: 80%;
-  height: 50%;
-  padding-top: 70px;
-  padding-bottom: 50px;
-  align-items: center;
-}
-
-.swiper-slide{
-  background-position: center;
-  background-size: cover;
-  width: 50%;
-  height: 80%;
-  background: white;
-  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
-  filter: blur(0px);
-}
-
-.swiper-slide-active{
-  filter: blur(0px);
-}
-
-.testimonialBox{
-  position: relative;
-  width: 60%;
-  padding: 40px;
-  padding-top: 90px;
-  color: #999;
-}
-
-.testimonialBox .content img{
-  position: absolute;
-  align-items: center;
-  top: 0;
-  left: 0px;
-  width: 450px;
-  height: 320px;
-}
-
 .card-odd-last{
   width: 100%;
   float: left;
@@ -591,4 +539,152 @@ img{
   top: 50%;
   transform: translate(-50%, 95%);
   padding: 16px 20px;
+}
+
+/*SLIDER*/
+
+.main{
+  overflow: hidden !important; 
+  align-items: center !important;
+}
+
+.container {
+  max-width: 75vw !important;
+  width: 100%;
+  padding: 4rem 2rem !important;
+  margin: 0 auto;
+  align-items: center !important;
+}
+
+.swiper-container{
+  width: 80%;
+  height: 50%; 
+  padding: 0 !important;
+  overflow:hidden !important;
+  align-items: center !important;
+  margin-left: 5vw;
+}
+
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  box-sizing: content-box;
+}
+
+.main .container .swiper-container .swiper-wrapper .swiper-slide .card-image {
+  background: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  border-radius: 2px;
+}
+
+.main .container .swiper-container .swiper-wrapper .swiper-slide .card-image img {
+  display: block;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.main .container .swiper-container .swiper-pagination-bullet {
+  opacity: 0.8;
+  background: #252a32;
+}
+
+.main .container .swiper-container .swiper-pagination-bullet-active {
+  background: #fff;
+}
+
+.main .container .swiper-container .swiper-button-next, .main .container .swiper-container .swiper-button-prev {
+  background-image: none;
+  background-size: 0;
+  background-repeat: no-repeat;
+  background-position: 0;
+  margin-top: -1rem;
+}
+
+.main .container .swiper-container .swiper-button-next .arrow-icon, .main .container .swiper-container .swiper-button-prev .arrow-icon {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+  left: -48px !important;
+}
+
+.swiper-button-next{
+  right: 14vw !important;
+}
+
+.swiper-button-prev{
+  left: 2.7vw !important;
+}
+
+@media screen and (max-width:1300px){
+  .swiper-container{
+    max-width: 80rem !important;
+  }  
+  
+  .swiper-button-next{
+    display: none !important;
+  }
+  
+  .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+    left: -288px !important;
+  }
+  
+  .swiper-button-prev{
+    display: none !important;
+  }
+}
+
+@media screen and (max-width:800px){
+  .swiper-container{
+    max-width: 60rem !important;
+  }  
+  
+  .swiper-button-next{
+    right: 105vw !important;
+  }
+  
+  .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+    left: -388px !important;
+  }
+  
+  .swiper-button-prev{
+    left: 2.7vw !important;
+  }
+  
+  .swiper-button-prev{
+    display: none !important;
+  }
+  
+  .but{
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 500px){
+  .swiper-container{
+    max-width: 27rem !important;
+  }
+  
+  .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+    width: 75% !important;
+  }
+  
+  .swiper-button-prev{
+    display: none !important;
+  }
+  
+  .but{
+    display: none !important;
+  }
 }
